--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.0"
+    "@vitejs/plugin-react-swc": "^4.2.2",
   }
 }
